fix: hide scrollbar in collection section on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,13 @@ body {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
+
+@layer utilities {
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
